# APAL

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dependencies.txt  Features.txt  LICENSE  README.md
cmake/: APAL.cmake  FindLV2.cmake  FindTortureTester.cmake  FindVST2.cmake  FindVST3.cmake  Findpluginval.cmake  integration_tests.cmake  symbol_export.cmake  version.cmake  version.h.in  xplug.cmake
examples/: CMakeLists.txt
examples/MidiForwarder/: CMakeLists.txt  MidiForwarder.cpp
examples/VolumePlugin/: CMakeLists.txt  VolumePlugin.cpp  VolumePlugin.hpp
formats/: CMakeLists.txt
formats/ladspa/: CMakeLists.txt  ladspa.cpp
formats/ladspa/tests/: CMakeLists.txt  LADSPATestSuite.cpp
formats/lv2/: CMakeLists.txt  TtlGenerator.cpp  lv2.cpp  lv2_ttl_generation.cpp  lv2_ttl_generation.hpp  turtle.cpp  turtle.hpp
formats/lv2/tests/: CMakeLists.txt  LV2Module.hpp  LV2RegressionTest.cpp  LV2TestSuite.cpp  lilv.c  lilv.h
formats/vst2/: CMakeLists.txt  vestige.cpp  vestige.h  vst_def.hpp
formats/vst2/tests/: CMakeLists.txt  VST2Module.hpp  VST2RegressionTest.cpp  VST2TestSuite.cpp
formats/vst2_os/: CMakeLists.txt  vestige.cpp  vestige.h
formats/vst3/: CMakeLists.txt  Component.cpp  Component.hpp  VST3AudioProcessorImpl.cpp  VST3AudioProcessorImpl.hpp  VST3EditControllerImpl.cpp  VST3EditControllerImpl.hpp  vst3.cpp
formats/vst3/tests/: CMakeLists.txt  VST3Module.hpp  VST3RegressionTest.cpp  VST3TestSuite.cpp
include/: CMakeLists.txt  GlobalData.hpp  IPlugin.hpp  Plugin.hpp  Types.hpp  c_unified_api.h
include/base/: Channel.hpp  DynamicPortComponent.hpp  FeatureComponents.hpp  InfoComponents.hpp  LazyPlugin.hpp  PluginBases.hpp  PortComponents.hpp  Ports.hpp  SimplePortComponent.hpp  StaticPortComponent.hpp
include/compatibility/: string_view.hpp
include/interfaces/: IAudioPort.hpp  IFeatureComponent.hpp  IInfoComponent.hpp  IPlugin.hpp  IPort.hpp  IPortComponent.hpp  Speaker.hpp
include/interfaces/Ports/: IAudioPort.hpp  IMidiPort.hpp  IPort.hpp  IPortComponent.hpp  Speaker.hpp
include/tools/: LibLoading.hpp  PluginUtils.hpp  PortHandling.hpp  StringTools.hpp
scripts/: install.bat  install.cmake  install.sh  install_plugintorture.cmake  install_vst3sdk.cmake  test_cov.sh
src/: CMakeLists.txt  GlobalData.cpp  IPlugin.cpp
src/base/: DynamicPortComponent.cpp  FeatureComponents.cpp  InfoComponents.cpp  LazyPlugin.cpp  PluginBases.cpp  PortComponents.cpp  Ports.cpp  SimplePortComponent.cpp
src/tools/: LibLoading.cpp  PluginUtils.cpp  PortHandling.cpp  StringTools.cpp
test/: CMakeLists.txt
test/XValidate/: CMakeLists.txt  IFormatTestSuite.hpp  XValidate.cpp  XValidate.hpp
test/XValidate/formats/: CMakeLists.txt
test/XValidate/formats/ladspa/: CMakeLists.txt  LADSPATestSuite.cpp  TestLadspa.cpp
test/XValidate/formats/ladspa/plugins/: noise.c  sine.cpp
test/XValidate/formats/lv2/: CMakeLists.txt  LV2Module.hpp  LV2TestSuite.cpp
test/XValidate/formats/vst2/: CMakeLists.txt  VST2TestSuite.cpp
test/XValidate/formats/vst3/: CMakeLists.txt  VST3TestSuite.cpp
test/XValidate/tools/: Logger.hpp
test/integrationtests/: CMakeLists.txt  TestLadspa.cpp  XValidate.cpp  XValidate.hpp
test/integrationtests/ladspa/: CMakeLists.txt
test/integrationtests/ladspa/plugins/: amp.c  delay.c  filter.c
test/integrationtests/vst3/: CMakeLists.txt  Processing.cpp  VST3Initialisation.cpp  VST3Initialisation.hpp
test/regression_tests/: CMakeLists.txt
test/system_tests/: CMakeLists.txt  IFormatTestSuite.hpp  XValidate.cpp  XValidate.hpp
test/system_tests/tools/: Logger.hpp
test/test_utils/: CatchTools.hpp  catch.hpp
test/tools/: CMakeLists.txt  TestLoading.cpp  TestLoading.hpp
test/unit_and_integrationtests/: CMakeLists.txt  TestGlobalData.cpp
test/unit_and_integrationtests/base/: TestFeatureComponents.cpp  TestInfoComponents.cpp  TestPluginBases.cpp  TestPortComponents.cpp  TestPorts.cpp
test/unit_and_integrationtests/interfaces/: InterfaceTestMethods.cpp  InterfaceTestMethods.hpp
test/unit_and_integrationtests/tools/: TestLibLoading.cpp  TestPortHandling.cpp  TestStringTools.cpp
test/unittests/: CMakeLists.txt  TestBaseFunctionality.cpp  TestGlobalData.cpp  TestLadspa.cpp  TestPortComponent.cpp  TestSymbolLoading.cpp  UnitTools.hpp  catch_main.cpp  lib_loading.cpp  lib_loading.hpp
test/unittests/base/: TestFeatureComponents.cpp  TestInfoComponents.cpp  TestPluginBases.cpp  TestPortComponents.cpp  TestPorts.cpp
test/unittests/interfaces/: InterfaceTestMethods.cpp
test/unittests/ladspa/: load.c
test/unittests/test_components/: CMakeLists.txt  exclude.def  libcode.version  simple_example_plugin.cpp  simple_symbol_export.cpp  static_example.cpp  static_example.hpp
test/unittests/tools/: TestLibLoading.cpp  TestPortHandling.cpp  TestStringTools.cpp
tests/: CMakeLists.txt  TestLadspa.cpp  TestSymbolLoading.cpp  catch_main.cpp  lib_loading.cpp  lib_loading.hpp
tests/ladspa/: analyseplugin.c
