add_library(MidiForwarder MODULE MidiForwarder.cpp )
target_link_libraries(MidiForwarder PUBLIC  XPlug)

if(XPLUG_LADSPA_SUPPORT)
    target_link_libraries(MidiForwarder PUBLIC  ladspa)
endif(XPLUG_LADSPA_SUPPORT)
if(XPLUG_VST2_SUPPORT)
   target_link_libraries(MidiForwarder PUBLIC  vst2)
endif(XPLUG_VST2_SUPPORT)

if(XPLUG_VST3_SUPPORT)
    target_link_libraries(MidiForwarder PUBLIC  vst3)
endif(XPLUG_VST3_SUPPORT)

if(XPLUG_LV2_SUPPORT)
    target_link_libraries(MidiForwarder PUBLIC  lv2)
    add_custom_command(TARGET MidiForwarder  POST_BUILD COMMAND TTLGenerator ARGS $<TARGET_FILE:MidiForwarder> BYPRODUCTS manifest.ttl MidiForwarder.ttl )
endif(XPLUG_LV2_SUPPORT)

if(XPLUG_BUILD_TESTS)
    include(xplug)
    DLOAD_PLUGINVAL()
    if(XPLUG_VST2_SUPPORT)
        RUN_VST2_TEST(MidiForwarder)
    endif(XPLUG_VST2_SUPPORT)
    if(XPLUG_VST3_SUPPORT)
        RUN_VST3_TEST(MidiForwarder)
    endif(XPLUG_VST3_SUPPORT)
    if(XPLUG_LADSPA_SUPPORT)
        RUN_LADSPA_TESTS(MidiForwarder)
    endif(XPLUG_LADSPA_SUPPORT)
    if(XPLUG_LV2_SUPPORT)
        RUN_LV2_TESTS(MidiForwarder)
    endif(XPLUG_LV2_SUPPORT)
endif(XPLUG_BUILD_TESTS)
