add_library(MidiForwarder MODULE MidiForwarder.cpp )
target_link_libraries(MidiForwarder PUBLIC  XPlug)

if(XPLUG_LADSPA_SUPPORT)
    target_link_libraries(MidiForwarder PUBLIC  ladspa)
endif(XPLUG_LADSPA_SUPPORT)
if(XPLUG_VST2_SUPPORT)
   target_link_libraries(MidiForwarder PUBLIC  vst2)
endif(XPLUG_VST2_SUPPORT)

if(XPLUG_VST3_SUPPORT)
    target_link_libraries(MidiForwarder PUBLIC  vst3)
endif(XPLUG_VST3_SUPPORT)

if(XPLUG_LV2_SUPPORT)
    target_link_libraries(MidiForwarder PUBLIC  lv2)
    add_custom_command(TARGET MidiForwarder  POST_BUILD COMMAND TTLGenerator ARGS $<TARGET_FILE:MidiForwarder> BYPRODUCTS manifest.ttl MidiForwarder.ttl )
endif(XPLUG_LV2_SUPPORT)

if(XPLUG_BUILD_TESTS)
    include(xplug)
    if(XPLUG_VST2_SUPPORT)
        RUN_VST2_TEST(MidiForwarder)
    endif(XPLUG_VST2_SUPPORT)
    if(XPLUG_VST3_SUPPORT)
        RUN_VST3_TEST(MidiForwarder)
    endif(XPLUG_VST3_SUPPORT)
    if(XPLUG_LADSPA_SUPPORT)
        RUN_LADSPA_TESTS(MidiForwarder)
    endif(XPLUG_LADSPA_SUPPORT)
    if(XPLUG_LV2_SUPPORT)
        RUN_LV2_TESTS(MidiForwarder)
    endif(XPLUG_LV2_SUPPORT)
endif(XPLUG_BUILD_TESTS)

# Get all propreties that cmake supports
execute_process(COMMAND cmake --help-property-list OUTPUT_VARIABLE CMAKE_PROPERTY_LIST)

# Convert command output into a CMake list
STRING(REGEX REPLACE ";" "\\\\;" CMAKE_PROPERTY_LIST "${CMAKE_PROPERTY_LIST}")
STRING(REGEX REPLACE "\n" ";" CMAKE_PROPERTY_LIST "${CMAKE_PROPERTY_LIST}")

function(print_properties)
    message ("CMAKE_PROPERTY_LIST = ${CMAKE_PROPERTY_LIST}")
endfunction(print_properties)

function(print_target_properties tgt)
    if(NOT TARGET ${tgt})
      message("There is no target named '${tgt}'")
      return()
    endif()

    foreach (prop ${CMAKE_PROPERTY_LIST})
        string(REPLACE "<CONFIG>" "${CMAKE_BUILD_TYPE}" prop ${prop})
    # Fix https://stackoverflow.com/questions/32197663/how-can-i-remove-the-the-location-property-may-not-be-read-from-target-error-i
    if(prop STREQUAL "LOCATION" OR prop MATCHES "^LOCATION_" OR prop MATCHES "_LOCATION$")
        continue()
    endif()
        # message ("Checking ${prop}")
        get_property(propval TARGET ${tgt} PROPERTY ${prop} SET)
        if (propval)
            get_target_property(propval ${tgt} ${prop})
            message ("${tgt} ${prop} = ${propval}")
        endif()
    endforeach(prop)
endfunction(print_target_properties)
print_target_properties(MidiForwarder)
print_target_properties(vst2)