add_library(MidiForwarder MODULE MidiForwarder.cpp )
target_link_libraries(MidiForwarder PUBLIC  APAL)

if(APAL_LADSPA_SUPPORT)
    target_link_libraries(MidiForwarder PUBLIC  ladspa)
endif(APAL_LADSPA_SUPPORT)
if(APAL_VST2_SUPPORT)
   target_link_libraries(MidiForwarder PUBLIC  vst2)
endif(APAL_VST2_SUPPORT)

if(APAL_VST3_SUPPORT)
    target_link_libraries(MidiForwarder PUBLIC  vst3)
endif(APAL_VST3_SUPPORT)

if(APAL_LV2_SUPPORT)
    target_link_libraries(MidiForwarder PUBLIC  lv2)
    add_custom_command(TARGET MidiForwarder  POST_BUILD COMMAND TTLGenerator ARGS $<TARGET_FILE:MidiForwarder> BYPRODUCTS manifest.ttl MidiForwarder.ttl )
endif(APAL_LV2_SUPPORT)

if(APAL_BUILD_TESTS)
    include(APAL)
    if(APAL_VST2_SUPPORT)
        RUN_VST2_TEST(MidiForwarder)
    endif(APAL_VST2_SUPPORT)
    if(APAL_VST3_SUPPORT)
        RUN_VST3_TEST(MidiForwarder)
    endif(APAL_VST3_SUPPORT)
    if(APAL_LADSPA_SUPPORT)
        RUN_LADSPA_TESTS(MidiForwarder)
    endif(APAL_LADSPA_SUPPORT)
    if(APAL_LV2_SUPPORT)
        RUN_LV2_TESTS(MidiForwarder)
    endif(APAL_LV2_SUPPORT)
endif(APAL_BUILD_TESTS)
