add_library(VolumePlugin MODULE VolumePlugin.cpp )
target_link_libraries(VolumePlugin PUBLIC  XPlug)

if(XPLUG_LADSPA_SUPPORT)
    target_link_libraries(VolumePlugin PUBLIC  ladspa)
endif(XPLUG_LADSPA_SUPPORT)
if(XPLUG_VST2_SUPPORT)
   target_link_libraries(VolumePlugin PUBLIC  vst2)
endif(XPLUG_VST2_SUPPORT)

if(XPLUG_VST3_SUPPORT)
    target_link_libraries(VolumePlugin PUBLIC  vst3)
endif(XPLUG_VST3_SUPPORT)

if(XPLUG_LV2_SUPPORT)
    target_link_libraries(VolumePlugin PUBLIC  lv2)
    add_custom_command(TARGET VolumePlugin  POST_BUILD COMMAND TTLGenerator ARGS $<TARGET_FILE:VolumePlugin> BYPRODUCTS manifest.ttl VolumePlugin.ttl )
endif(XPLUG_LV2_SUPPORT)

if(XPLUG_BUILD_TESTS)
    include(xplug)
    DLOAD_PLUGINVAL()
    if(XPLUG_VST2_SUPPORT)
        RUN_VST2_TEST(VolumePlugin)
    endif(XPLUG_VST2_SUPPORT)
    if(XPLUG_VST3_SUPPORT)
        RUN_VST3_TEST(VolumePlugin)
    endif(XPLUG_VST3_SUPPORT)
    if(XPLUG_LADSPA_SUPPORT)
        RUN_LADSPA_TESTS(VolumePlugin)
    endif(XPLUG_LADSPA_SUPPORT)
    if(XPLUG_LV2_SUPPORT)
        RUN_LV2_TESTS(VolumePlugin)
    endif(XPLUG_LV2_SUPPORT)
endif(XPLUG_BUILD_TESTS)
