add_library(VolumePlugin MODULE VolumePlugin.cpp )
target_link_libraries(VolumePlugin PUBLIC  APAL)

if(APAL_LADSPA_SUPPORT)
    target_link_libraries(VolumePlugin PUBLIC  ladspa)
endif(APAL_LADSPA_SUPPORT)
if(APAL_VST2_SUPPORT)
   target_link_libraries(VolumePlugin PUBLIC  vst2)
endif(APAL_VST2_SUPPORT)

if(APAL_VST3_SUPPORT)
    target_link_libraries(VolumePlugin PUBLIC  vst3)
endif(APAL_VST3_SUPPORT)

if(APAL_LV2_SUPPORT)
    target_link_libraries(VolumePlugin PUBLIC  lv2)
    add_custom_command(TARGET VolumePlugin  POST_BUILD COMMAND TTLGenerator ARGS $<TARGET_FILE:VolumePlugin> BYPRODUCTS manifest.ttl VolumePlugin.ttl )
endif(APAL_LV2_SUPPORT)

if(APAL_BUILD_TESTS)
    include(APAL)
    if(APAL_VST2_SUPPORT)
        RUN_VST2_TEST(VolumePlugin)
    endif(APAL_VST2_SUPPORT)
    if(APAL_VST3_SUPPORT)
        RUN_VST3_TEST(VolumePlugin)
    endif(APAL_VST3_SUPPORT)
    if(APAL_LADSPA_SUPPORT)
        RUN_LADSPA_TESTS(VolumePlugin)
    endif(APAL_LADSPA_SUPPORT)
    if(APAL_LV2_SUPPORT)
        RUN_LV2_TESTS(VolumePlugin)
    endif(APAL_LV2_SUPPORT)
endif(APAL_BUILD_TESTS)
