include(symbol_export)

find_package(LV2 REQUIRED)
add_library(lv2  "lv2.cpp" "lv2_ttl_generation.cpp")
set_target_properties(lv2 PROPERTIES POSITION_INDEPENDENT_CODE  True)
target_link_libraries(lv2 XPlug)
target_include_directories(lv2 PRIVATE ${LV2_INCLUDE_DIRS}  ${CMAKE_CURRENT_LIST_DIR}/../../src)
target_compile_features(lv2 PUBLIC cxx_std_11)
EXPORT_SYMBOLS(lv2 FUNCTION_NAMES lv2_descriptor lv2_lib_descriptor getTTLFromPlugin getManifestFromMultpleInfos getPluginInfos)
add_executable(TTLGenerator  "TtlGenerator.cpp")
target_link_libraries(TTLGenerator XPlug)
install(TARGETS lv2 EXPORT XPlugExport DESTINATION lib)