# Enable APAL_LV2_SUPPORT if present, othertwhise not.
# if its forced to used by specify APAL_LV2_SUPPORT to ON, VST3 package is required.
find_package(LV2)
option(APAL_LV2_SUPPORT "Support vor LV2" ${LV2_FOUND})

if(APAL_LV2_SUPPORT)
    include(symbol_export)
    find_package(LV2 REQUIRED)
    add_library(lv2  "lv2.cpp" "lv2_ttl_generation.cpp")
    set_target_properties(lv2 PROPERTIES POSITION_INDEPENDENT_CODE  True)
    target_link_libraries(lv2 APAL)
    target_include_directories(lv2 SYSTEM PRIVATE ${LV2_INCLUDE_DIRS})
    target_compile_features(lv2 PUBLIC cxx_std_11)
    EXPORT_SYMBOLS(lv2 FUNCTION_NAMES lv2_descriptor lv2_lib_descriptor getTTLFromPlugin getManifestFromMultpleInfos getPluginInfos)
    add_executable(TTLGenerator  "TtlGenerator.cpp")
    target_link_libraries(TTLGenerator APAL)
    install(TARGETS lv2 EXPORT APALExport DESTINATION lib)
    add_subdirectory(tests)
   # add_executable(tt  "turtle.cpp")
endif(APAL_LV2_SUPPORT)