include(symbol_export)
find_package(VST2)
add_library(vst2 "vestige.h" "vestige.cpp" "vst_def.hpp")
target_compile_features(vst2 PUBLIC cxx_std_11)
if(VST2_FOUND)
    target_include_directories(vst2 PRIVATE ${VST2_INCLUDE_DIRS})
    target_compile_definitions(vst2 PRIVATE USE_VST2_SDK)
endif(VST2_FOUND)
target_include_directories(vst2 PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../../src)
set_target_properties(vst2 PROPERTIES POSITION_INDEPENDENT_CODE  True)
target_link_libraries(vst2 XPlug)
EXPORT_SYMBOLS(vst2 FUNCTION_NAMES VSTPluginMain)
install(TARGETS vst2 EXPORT XPlugExport DESTINATION lib)