option(XPLUG_VST2_SUPPORT "Support vor VST2" ON)

if(XPLUG_VST2_SUPPORT)
    include(symbol_export)
    find_package(VST2)
    add_library(vst2 "vestige.cpp" "vst_def.hpp")
    target_compile_features(vst2 PUBLIC cxx_std_11)
    if(VST2_FOUND)
        target_include_directories(vst2 SYSTEM PRIVATE ${VST2_INCLUDE_DIRS})
        target_compile_definitions(vst2 PRIVATE USE_VST2_SDK)
    endif(VST2_FOUND)
    target_include_directories(vst2 SYSTEM PRIVATE ${PROJECT_SOURCE_DIR}/deps/)
    set_target_properties(vst2 PROPERTIES POSITION_INDEPENDENT_CODE  True)
    target_link_libraries(vst2 XPlug)
    EXPORT_SYMBOLS(vst2 FUNCTION_NAMES VSTPluginMain)
    install(TARGETS vst2 EXPORT XPlugExport DESTINATION lib)
    add_subdirectory(tests)

    # Get all propreties that cmake supports
execute_process(COMMAND cmake --help-property-list OUTPUT_VARIABLE CMAKE_PROPERTY_LIST)

# Convert command output into a CMake list
STRING(REGEX REPLACE ";" "\\\\;" CMAKE_PROPERTY_LIST "${CMAKE_PROPERTY_LIST}")
STRING(REGEX REPLACE "\n" ";" CMAKE_PROPERTY_LIST "${CMAKE_PROPERTY_LIST}")

function(print_properties)
    message ("CMAKE_PROPERTY_LIST = ${CMAKE_PROPERTY_LIST}")
endfunction(print_properties)

function(print_target_properties tgt)
    if(NOT TARGET ${tgt})
      message("There is no target named '${tgt}'")
      return()
    endif()

    foreach (prop ${CMAKE_PROPERTY_LIST})
        string(REPLACE "<CONFIG>" "${CMAKE_BUILD_TYPE}" prop ${prop})
    # Fix https://stackoverflow.com/questions/32197663/how-can-i-remove-the-the-location-property-may-not-be-read-from-target-error-i
    if(prop STREQUAL "LOCATION" OR prop MATCHES "^LOCATION_" OR prop MATCHES "_LOCATION$")
        continue()
    endif()
        # message ("Checking ${prop}")
        get_property(propval TARGET ${tgt} PROPERTY ${prop} SET)
        if (propval)
            get_target_property(propval ${tgt} ${prop})
            message ("${tgt} ${prop} = ${propval}")
        endif()
    endforeach(prop)
endfunction(print_target_properties)
PRINT_TARGET_PROPERTIES(vst2)
endif(XPLUG_VST2_SUPPORT)