option(APAL_VST2_SUPPORT "Support vor VST2" ON)

if(APAL_VST2_SUPPORT)
    include(symbol_export)
    find_package(VST2)
    add_library(vst2 "vestige.cpp" "vst_def.hpp")
    target_compile_features(vst2 PUBLIC cxx_std_11)
    if(VST2_FOUND)
        target_include_directories(vst2 SYSTEM PRIVATE ${VST2_INCLUDE_DIRS})
        target_compile_definitions(vst2 PRIVATE USE_VST2_SDK)
    endif(VST2_FOUND)
    target_include_directories(vst2 SYSTEM PRIVATE ${PROJECT_SOURCE_DIR}/deps/)
    set_target_properties(vst2 PROPERTIES POSITION_INDEPENDENT_CODE  True)
    target_link_libraries(vst2 APAL)
    EXPORT_SYMBOLS(vst2 FUNCTION_NAMES VSTPluginMain)
    install(TARGETS vst2 EXPORT APALExport DESTINATION lib)
    add_subdirectory(tests)
endif(APAL_VST2_SUPPORT)